fixed spacing

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ a:visited {
   align-self: flex-start;
   position: absolute;
   bottom: -50rem;
-  left: 34rem;
+  left: 33rem;
 }
 a.icon:link,
 a.icon:visited {
